[tool.poetry]
name = "teachable-takehome"
version = "0.1.0"
description = ""
authors = ["dashdanw <dashdanw@gmail.com>"]
readme = "README.md"
packages = [{include = "teachable_takehome"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pydantic = "^1.10.5"
textual = "^0.12.1"
PyTermGUI = "^7.3.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
